--- a/game/templates/multiends/web.html
+++ b/game/templates/multiends/web.html
@@ -13,6 +13,6 @@
         $(document).ready(function(){
             let ac_game = new AcGame("ac_game_start")
         });
-        console.log("sb")
+        console.log("sb");
     </script>
 </body>
