--- a/game/templates/multiends/web.html
+++ b/game/templates/multiends/web.html
@@ -1,9 +1,8 @@
 {% load static %}
-
 <head>
     <link rel="stylesheet" href="https://cdn.acwing.com/static/jquery-ui-dist/jquery-ui.min.css">
     <script src="https://cdn.acwing.com/static/jquery/js/jquery-3.3.1.min.js"></script>
-    <link res="stylesheet" href="{% static 'css/game.css' %}">
+    <link rel="stylesheet" href="{% static 'css/game.css' %}">
     <script src="{% static 'js/dist/game.js' %}"></script>
 </head>
 
@@ -11,8 +10,7 @@
     <div id="ac_game_start"></div>
     <script>
         $(document).ready(function(){
-            let ac_game = new AcGame("ac_game_start")
+            let ac_game = new AcGame("ac_game_start");
         });
-        console.log("sb");
     </script>
 </body>
