--- a/game/static/css/game.css
+++ b/game/static/css/game.css
@@ -115,7 +115,7 @@
     border-radius: 5px;
 }
 
-.ac_game_menu {
+.ac-game-menu {
     width: 100%;
     height: 100%;
     background-image: url("/static/image/menu/background.gif");
@@ -123,14 +123,14 @@
     user-select: none;
 }
 
-.ac_game_menu_field {
+.ac-game-menu-field {
     width: 20vw;
     position: relative;
     top: 40%;
     left: 20%;
 }
 
-.ac_game_menu_field_item {
+.ac-game-menu-field-item {
     color: white;
     height: 6vh;
     width: 18vw;
@@ -143,14 +143,21 @@
     cursor: pointer;
 }
 
-.ac_game_menu_field_item:hover {
+.ac-game-menu-field-item:hover {
     transform: scale(1.2);
     transition: 100ms;
 }
 
-.ac_game_playground {
+.ac-game-playground {
     width: 100%;
     height: 100%;
     user-select: none;
+    background-color: grey;
 }
 
+.ac-game-playground > canvas {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
